--- a/CSharpHelloWorld/CSharpHelloWorld.csproj
+++ b/CSharpHelloWorld/CSharpHelloWorld.csproj
@@ -43,8 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ControlFlow\Conditionals.cs" />
-    <Compile Include="ControlFlow\Loops.cs" />
+    <Compile Include="Demo\Lists.cs" />
+    <Compile Include="Exercises\Conditionals.cs" />
+    <Compile Include="Exercises\Loops.cs" />
     <Compile Include="Demo\DemoArray.cs" />
     <Compile Include="Demo\DemoList.cs" />
     <Compile Include="Math\Calculator.cs" />
