67. Demo String Builder

--- a/CSharpHelloWorld/CSharpHelloWorld.csproj
+++ b/CSharpHelloWorld/CSharpHelloWorld.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Demo\DemoDateTime.cs" />
     <Compile Include="Demo\DemoString.cs" />
+    <Compile Include="Demo\DemoStringBuilder.cs" />
     <Compile Include="Demo\DemoSummarisingText.cs" />
     <Compile Include="Demo\DemoTimeSpan.cs" />
     <Compile Include="Exercises\Lists.cs" />
