--- a/CSharpHelloWorld/CSharpHelloWorld.csproj
+++ b/CSharpHelloWorld/CSharpHelloWorld.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Exercises\Strings.cs" />
     <Compile Include="Math\Calculator.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="ProceduralProgramming.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Season.cs" />
