--- a/CSharpHelloWorld/CSharpHelloWorld.csproj
+++ b/CSharpHelloWorld/CSharpHelloWorld.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Demo\DemoDateTime.cs" />
     <Compile Include="Demo\DemoDirectory.cs" />
     <Compile Include="Demo\DemoFileAndFileInfo.cs" />
+    <Compile Include="Demo\DemoPath.cs" />
     <Compile Include="Demo\DemoString.cs" />
     <Compile Include="Demo\DemoStringBuilder.cs" />
     <Compile Include="Demo\DemoSummarisingText.cs" />
